--- a/package.json
+++ b/package.json
@@ -1,20 +1,23 @@
 {
-  "name": "aura",
-  "private": true,
-  "version": "0.0.0",
-  "type": "module",
+  "name": "aura-ide",
+  "version": "1.0.0",
+  "description": "",
+  "main": "index.js",
   "scripts": {
-    "dev": "vite",
-    "build": "tsc && vite build",
-    "preview": "vite preview",
-    "tauri": "tauri"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "electron index.js"
   },
+  "keywords": [],
+  "author": "",
+  "license": "ISC",
   "dependencies": {
-    "@tauri-apps/api": "^1"
+    "discord-rpc": "^4.0.1",
+    "electron": "^29.1.5",
+    "highlight.js": "^11.9.0"
   },
   "devDependencies": {
-    "@tauri-apps/cli": "^1",
-    "vite": "^5.0.0",
-    "typescript": "^5.0.2"
+    "autoprefixer": "^10.4.19",
+    "postcss": "^8.4.38",
+    "tailwindcss": "^3.4.1"
   }
 }
