--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "discord-rich-presence": "^0.0.8",
     "discord-rpc": "^4.0.1",
     "electron": "^29.1.5",
     "highlight.js": "^11.9.0"
